--- a/client/src/layouts/public/Header/Responsive.css
+++ b/client/src/layouts/public/Header/Responsive.css
@@ -15,3 +15,91 @@
     .control {
     }
 }
+
+/*                 <div className={cx('column', 'l-2', 'm-4', 'c-6', 'type')}>
+                    <label className={cx('title')}>Loại phim</label>
+                    <div className={cx('control')}>
+                        <p className={cx('default')}>-- Tất cả --</p>
+                    </div>
+                    <ul className={cx('list')}>
+                        {category.map((item, index) => (
+                            <li
+                                className={cx('item')}
+                                value={publicRoutes[2].path}
+                                key={index}
+                            >
+                                {item}
+                            </li>
+                        ))}
+                    </ul>
+                </div>
+
+                <div className={cx('column', 'l-2', 'm-4', 'c-6', 'type')}>
+                    <label className={cx('title')}>Loại phim</label>
+                    <div className={cx('control')}>
+                        <p className={cx('default')}>-- Tất cả --</p>
+                    </div>
+                    <ul className={cx('list')}>
+                        {category.map((item, index) => (
+                            <li
+                                className={cx('item')}
+                                value={publicRoutes[2].path}
+                                key={index}
+                            >
+                                {item}
+                            </li>
+                        ))}
+                    </ul>
+                </div>
+
+                <div className={cx('column', 'l-2', 'm-4', 'c-6', 'type')}>
+                    <label className={cx('title')}>Loại phim</label>
+                    <div className={cx('control')}>
+                        <p className={cx('default')}>-- Tất cả --</p>
+                    </div>
+                    <ul className={cx('list')}>
+                        {category.map((item, index) => (
+                            <li
+                                className={cx('item')}
+                                value={publicRoutes[2].path}
+                                key={index}
+                            >
+                                {item}
+                            </li>
+                        ))}
+                    </ul>
+                </div>
+
+                <div className={cx('column', 'l-2', 'm-4', 'c-6', 'type')}>
+                    <label className={cx('title')}>Loại phim</label>
+                    <div className={cx('control')}>
+                        <p className={cx('default')}>-- Tất cả --</p>
+                    </div>
+                    <ul className={cx('list')}>
+                        {category.map((item, index) => (
+                            <li
+                                className={cx('item')}
+                                value={publicRoutes[2].path}
+                                key={index}
+                            >
+                                {item}
+                            </li>
+                        ))}
+                    </ul>
+                </div>
+
+                <div className={cx('column', 'l-2', 'm-4', 'c-6', 'type')}>
+                    <label className={cx('title')}>Loại phim</label>
+                    <div className={cx('control')}></div>
+                    <ul className={cx('list')}>
+                        {category.map((item, index) => (
+                            <li
+                                className={cx('item')}
+                                value={publicRoutes[2].path}
+                                key={index}
+                            >
+                                {item}
+                            </li>
+                        ))}
+                    </ul>
+                </div> */
