--- a/client/src/layouts/components/Header/Header.module.scss
+++ b/client/src/layouts/components/Header/Header.module.scss
@@ -1,14 +1,13 @@
 :root {
-    --brand-width: 200px;
+    --brand-width: 220px;
     --red-btn: #c41f20;
 }
 
 .test {
-    background-color: #428bca;
+    background-color: rgba(51, 10, 103, 0.93);
 }
 
 .wrapper {
-    // max-width: var(--home-max-width);
     height: var(--default-header-height);
     display: flex;
     align-items: center;
@@ -20,9 +19,10 @@
     z-index: 10;
 }
 
-::-webkit-scrollbar {
+.showScroll {
     background-color: #fff;
 }
+
 .nav-brand {
     height: 100%;
     display: flex;
@@ -36,6 +36,8 @@
         font-weight: 700;
         color: #dc1a28;
         margin: 0 0 0 48px;
+        cursor: pointer;
+        // font-family: 'Merriweather';
     }
 
     .film-icon {
