--- a/server/views/admin/layout/_navbar.ejs
+++ b/server/views/admin/layout/_navbar.ejs
@@ -69,8 +69,14 @@
         </li>
         <!-- Menu Footer-->
         <li class="user-footer">
-          <a href="#" class="btn btn-default btn-flat">Tài khoản</a>
-          <a href="#" class="btn btn-default btn-flat float-right">Đăng xuất</a>
+          <a href="/admin/account" class="btn btn-default btn-flat"
+            >Tài khoản</a
+          >
+          <a
+            href="/admin/account/login"
+            class="btn btn-default btn-flat float-right"
+            >Đăng xuất</a
+          >
         </li>
       </ul>
     </li>
