--- a/server/views/admin/layout/_sidebar.ejs
+++ b/server/views/admin/layout/_sidebar.ejs
@@ -1,5 +1,5 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
-  <a href="#" class="brand-link">
+  <a href="/admin/dashboard" class="brand-link">
     <span class="brand-text font-weight-light">XemPhim Admin</span>
   </a>
 
