--- a/server/views/admin/layout/_layout.ejs
+++ b/server/views/admin/layout/_layout.ejs
@@ -15,6 +15,13 @@
       rel="stylesheet"
       href="/Themes/plugins/fontawesome-free/css/all.min.css"
     />
+    <!-- Select2 -->
+    <link rel="stylesheet" href="/Themes/plugins/select2/css/select2.min.css" />
+    <!-- Tempusdominus Bootstrap 4 -->
+    <link
+      rel="stylesheet"
+      href="/Themes/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"
+    />
     <!-- Theme style -->
     <link rel="stylesheet" href="/Themes/dist/css/adminlte.min.css" />
   </head>
@@ -44,9 +51,30 @@
     <script src="/Themes/plugins/jquery/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="/Themes/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- Select2 -->
+    <script src="/Themes/plugins/select2/js/select2.full.min.js"></script>
+    <!-- InputMask -->
+    <script src="/Themes/plugins/moment/moment.min.js"></script>
+    <script src="/Themes/plugins/inputmask/jquery.inputmask.min.js"></script>
+    <!-- Tempusdominus Bootstrap 4 -->
+    <script src="/Themes/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
     <!-- AdminLTE App -->
     <script src="/Themes/dist/js/adminlte.min.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="/Themes/dist/js/demo.js"></script>
+    <script>
+      $(function () {
+        $('.select2').select2();
+        //Date picker
+        $('#reservationdate').datetimepicker({
+          format: 'L',
+        });
+        //Datemask mm/dd/yyyy
+        $('#inputPremierDate').inputmask('mm/dd/yyyy', {
+          placeholder: 'mm/dd/yyyy',
+        });
+      });
+    </script>
+    <%- script %>
   </body>
 </html>
