--- a/client/src/layouts/components/public/ListFilm/ListFilm.module.scss
+++ b/client/src/layouts/components/public/ListFilm/ListFilm.module.scss
@@ -40,10 +40,12 @@
     display: flex;
     justify-content: space-between;
     font-size: 1.6rem;
+
     .film-name {
-        width: 50%;
+        width: 70%;
         padding: 12px;
         margin-bottom: 12px;
+        overflow: hidden;
         .name-vi {
             font-weight: 700;
             color: #dbdbdd;
@@ -55,6 +57,11 @@
         .name-en {
             display: flex;
             > a {
+                display: -webkit-boxs;
+                -webkit-box-orient: vertical;
+                -webkit-line-clamp: 2;
+                overflow: hidden;
+                text-overflow: ellipsis;
                 color: #7a7a7a;
                 &:hover {
                     text-decoration: underline;
@@ -63,6 +70,7 @@
             .year {
                 margin-left: 6px;
                 color: #b5b5b5;
+
                 &:hover {
                     text-decoration: underline;
                 }
@@ -74,7 +82,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-end;
-        width: 50%;
+        width: 30%;
         padding: 12px 0;
         color: #dbdbdd;
         .time {
@@ -89,10 +97,17 @@
 }
 
 .row-2 {
-    padding-left: 12px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 2.4rem;
+    max-height: 4.8rem;
     font-size: 1.6rem;
-    color: #b5b5b5;
+    padding: 0 12px;
     margin-bottom: 12px;
+    color: #b5b5b5;
 }
 
 .row-3 {
