--- a/client/src/page/HotMovie/HotMovie.module.scss
+++ b/client/src/page/HotMovie/HotMovie.module.scss
@@ -3,7 +3,7 @@
 }
 
 .wrapper {
-    //
+    padding-bottom: 48px;
 }
 .header {
     width: calc(100% - 20px);
@@ -42,14 +42,22 @@
                 background-color: rgba(255, 255, 255, 0.2);
             }
         }
-
-        .month {
-        }
-
-        .year {
-        }
     }
-    .active {
-        color: #3f51b5;
+}
+
+.classify .active {
+    color: #3f51b5 !important;
+    // text-decoration: dashed !important;
+    border-bottom: 2px solid #3f51b5 !important;
+    transition: all 0.3s ease;
+    // animation: fadeIn ease-in 0.9s;
+}
+
+@keyframes fadeIn {
+    from {
+        transform: translateX(-10px);
+    }
+    to {
+        transform: translateX(0);
     }
 }
