--- a/server/views/admin/film/add.ejs
+++ b/server/views/admin/film/add.ejs
@@ -165,10 +165,10 @@
     </div>
     <div class="row">
       <div class="col-12">
-        <a href="#" class="btn btn-secondary">Cancel</a>
+        <a href="#" class="btn btn-secondary">Quay lại</a>
         <input
           type="submit"
-          value="Create new Project"
+          value="Tạo phim mới"
           class="btn btn-success float-right"
         />
       </div>
