--- a/client/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/client/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,5 +1,6 @@
 .content {
     max-width: var(--home-max-width);
+    max-width: var(--home-max-width);
     margin: auto;
     margin-top: 100px;
     background-color: var(--main-color);
