--- a/client/src/layouts/components/Footer/Footer.module.scss
+++ b/client/src/layouts/components/Footer/Footer.module.scss
@@ -1,10 +1,13 @@
 .wrapper {
-    max-width: 100%;
+    width: 100%;
     background-image: url('https://truongthinh.info/wp-content/uploads/2021/10/01/02/anh-cac-mau-background-trang-den-dep-don-gian-ma-sang-trong-1.jpg');
     padding: 48px 24px;
     color: #fff;
     object-fit: cover;
     overflow: hidden;
+    position: relative;
+    right: 0;
+    left: 0;
 }
 
 .compare {
@@ -52,5 +55,13 @@
     .fb,
     .telegram {
         font-size: 2.4rem;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .contact {
+        margin-right: 0;
+        margin-left: 30px;
+        justify-content: flex-start;
     }
 }
