--- a/client/src/layouts/components/public/Header/Header.module.scss
+++ b/client/src/layouts/components/public/Header/Header.module.scss
@@ -3,7 +3,7 @@
     --width-item: 200px;
 }
 
-.wrapper { 
+.wrapper {
     display: flex !important;
     justify-content: space-around;
     background-color: #091c2d;
@@ -158,8 +158,14 @@
     }
 }
 
-@media (max-width: 739px) {
+@media (max-width: 768px) {
     .block .type {
         flex-basis: 50%;
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    .type {
+        flex: none;
     }
 }
