--- a/client/src/layouts/components/public/ListFilm/ListFilm.module.scss
+++ b/client/src/layouts/components/public/ListFilm/ListFilm.module.scss
@@ -13,6 +13,7 @@
 .item {
     width: 100%;
     height: 230px;
+    height: auto;
     display: flex;
 }
 
@@ -39,10 +40,10 @@
 .row-1 {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     font-size: 1.6rem;
 
     .film-name {
-        width: 70%;
         padding: 12px;
         margin-bottom: 12px;
         overflow: hidden;
@@ -56,21 +57,21 @@
 
         .name-en {
             display: flex;
+            color: #7a7a7a;
             > a {
                 display: -webkit-boxs;
                 -webkit-box-orient: vertical;
                 -webkit-line-clamp: 2;
-                overflow: hidden;
                 text-overflow: ellipsis;
-                color: #7a7a7a;
+                margin-right: 6px;
+                overflow: hidden;
                 &:hover {
                     text-decoration: underline;
                 }
             }
             .year {
-                margin-left: 6px;
                 color: #b5b5b5;
-
+                margin-right: 0;
                 &:hover {
                     text-decoration: underline;
                 }
@@ -82,8 +83,8 @@
         display: flex;
         flex-direction: column;
         align-items: flex-end;
-        width: 30%;
-        padding: 12px 0;
+        padding: 12px;
+        padding-right: 0;
         color: #dbdbdd;
         .time {
             color: #b5b5b5;
@@ -104,25 +105,34 @@
     text-overflow: ellipsis;
     line-height: 2.4rem;
     max-height: 4.8rem;
-    font-size: 1.6rem;
     padding: 0 12px;
     margin-bottom: 12px;
+    font-size: 1.6rem;
     color: #b5b5b5;
 }
 
 .row-3 {
     display: flex;
     justify-content: space-between;
-
+    align-items: center;
+    flex-wrap: wrap;
     .document {
+        display: flex;
+        flex-wrap: wrap;
         padding: 12px;
         font-size: 1.2rem;
         a {
-            width: 52px;
-            height: 24px;
             display: flex;
             justify-content: center;
             align-items: center;
+            height: auto;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            padding: 2px 6px;
+            margin-right: 6px;
+            margin-bottom: 6px;
             border-radius: 4px;
             background-color: #363636;
             &:hover {
@@ -132,11 +142,10 @@
     }
 
     .IMDh {
-        padding: 12px 0;
-        width: 50%;
         display: flex;
         justify-content: flex-end;
         align-items: center;
+        padding: 12px 0 12px 12px;
         font-size: 1.6rem;
         font-weight: 700;
         color: #b5b5b5;
@@ -146,5 +155,16 @@
             height: 40px;
             margin-right: 16px;
         }
+    }
+}
+
+//Small
+@media screen and (max-width: 575px) {
+    .row-1 {
+        // display: block;
+    }
+
+    .row-3 {
+        display: block;
     }
 }
