--- a/client/src/layouts/components/public/Title/Title.module.scss
+++ b/client/src/layouts/components/public/Title/Title.module.scss
@@ -3,6 +3,9 @@
     font-size: 3.2rem;
     color: #fff;
     margin-bottom: 16px;
-    margin-left: 10px;
+    padding-left: 10px;
     font-weight: 500;
+}
+
+@media only screen and (max-width: 576px) {
 }
