--- a/client/src/page/HotMovie/HotMovie.module.scss
+++ b/client/src/page/HotMovie/HotMovie.module.scss
@@ -31,7 +31,7 @@
         .year {
             color: rgba(255, 255, 255, 0.7);
             height: 100%;
-            min-width: 160px;
+            width: calc(100% / 3);
             font-size: 1.6rem;
             font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
             background-color: transparent;
@@ -47,17 +47,16 @@
 
 .classify .active {
     color: #3f51b5 !important;
-    // text-decoration: dashed !important;
     border-bottom: 2px solid #3f51b5 !important;
     transition: all 0.3s ease;
-    // animation: fadeIn ease-in 0.9s;
 }
 
-@keyframes fadeIn {
-    from {
-        transform: translateX(-10px);
-    }
-    to {
-        transform: translateX(0);
+//Medium
+@media screen and (max-width: 768px) {
+    //change font-size title
+    .header {
+        .title {
+            font-size: 2rem;
+        }
     }
 }
