--- a/client/src/page/MovieDetails/MovieDetails.module.scss
+++ b/client/src/page/MovieDetails/MovieDetails.module.scss
@@ -1,14 +1,16 @@
 :root {
-    --content-width: 1340px;
+    --content-width: 100%;
 }
 
 .wrapper {
+    overflow: hidden;
     min-height: 1000px;
 }
 
 .background {
     width: 100%;
     height: 600px;
+
     .image {
         display: block;
         width: 100%;
@@ -38,17 +40,27 @@
 
 .container {
     display: flex;
-    margin-top: -360px;
     position: relative;
+    padding: 48px; //sua
+    margin-top: -360px;
     color: #fff;
-    .column-1 {
+
+    .details {
+        display: flex;
+        margin: -12px -18px;
+        overflow: hidden;
+    }
+
+    .column-left {
         width: 25%;
         padding: 12px 32px;
         .film-image {
+            height: auto;
+            width: 90%;
+            margin: auto;
             .image {
                 display: block;
                 width: 100%;
-                height: 432px;
             }
         }
 
@@ -59,7 +71,7 @@
             margin-top: 30px;
             width: 100%;
             height: 50px;
-            background-color: #f14668;
+
             background-color: #dd003f;
             border-radius: 5px;
             .icon {
@@ -72,11 +84,14 @@
             .text {
                 font-size: 1.8rem;
             }
+            &:hover {
+                background-color: #f14668;
+            }
         }
     }
 }
 
-.container .column-2 {
+.container .column-right {
     width: 75%;
     padding: 12px 32px;
 
@@ -184,7 +199,7 @@
     }
 }
 
-.column-2 .info {
+.column-right .info {
     margin-bottom: 30px;
     .establish,
     .premiere,
@@ -192,6 +207,7 @@
         display: flex;
         font-size: 1.6rem;
         font-weight: 400;
+        line-height: 3rem;
         color: #7a7a7a;
 
         p {
@@ -214,7 +230,7 @@
     }
 }
 
-.column-2 .description {
+.column-right .description {
     font-size: 1.6rem;
     margin-bottom: 30px;
     color: #b5b5b5;
@@ -229,7 +245,8 @@
     margin-bottom: 20px;
     .header {
         color: #fff;
-        font-size: 1.8rem;
+        font-size: 1.6rem;
+        font-weight: 600;
     }
 
     .icon {
@@ -242,19 +259,36 @@
             cursor: pointer;
         }
 
-        .icon-right {
+        .disable {
+            color: #b5b5b5;
+            cursor: text;
+        }
+        .none {
+            display: none;
         }
     }
 }
 
-.column-2 .cast {
+// --sua
+.cast .list .slick-slider {
+    width: 2550px;
+    display: flex;
+
+    .slide {
+        transform: translate3d(-664px, 0px, 0px);
+    }
+}
+
+.column-right .cast {
     .list {
         display: flex;
         .item {
             display: flex;
             flex-direction: column;
             align-items: center;
-            width: 166px;
+            width: calc(100% / 6);
+            flex-shrink: 0;
+            margin: 0 auto;
             a {
                 figure {
                     width: 120px;
@@ -278,6 +312,7 @@
                 margin-top: 10px;
                 display: block;
                 text-align: center;
+                width: 100%;
 
                 .name {
                     font-size: 1.6rem;
@@ -291,23 +326,32 @@
                     font-size: 1.4rem;
                     margin-top: 3px;
                     color: #b5b5b5;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 2;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
             }
         }
     }
 }
 
-.column-2 .trailer {
-    margin-top: 36px;
+.column-right .trailer {
+    margin-top: 38px;
 
     .list-trailer {
         display: flex;
         align-items: center;
+        justify-content: space-between;
+        margin-top: -14px;
+        margin-left: 2px;
 
         .item-trailer {
-            width: 240px;
-            height: 124px;
-            padding-right: 16px;
+            width: calc(100% / 4);
+            height: auto;
+            padding: 10px;
+            flex-shrink: 0;
             .clip {
                 position: relative;
                 cursor: pointer;
@@ -316,7 +360,9 @@
                     height: 100%;
                 }
                 &:hover {
+                    // margin: -2px;
                     border: 2px solid #cc7b19;
+                    // box-shadow: 0 0 0 2px #cc7b19;
                 }
             }
             .clip:hover .button-play {
@@ -336,6 +382,108 @@
                 .icon {
                     fill: #fff;
                 }
+            }
+        }
+    }
+}
+
+.wrapper .footer h1 {
+    color: #fff;
+}
+
+// RESPONSIVE:
+
+//Extra Small Device
+@media screen and (max-width: 575px) {
+    .container .column-right {
+        .title {
+            font-size: 3rem;
+        }
+    }
+    .column-right .cast {
+        .list {
+            .item {
+                width: calc(100% / 2);
+            }
+        }
+    }
+
+    .column-right .trailer {
+        .list-trailer {
+            .item-trailer {
+                width: 50%;
+            }
+        }
+    }
+}
+
+@media (min-width: 576px) and (max-width: 768px) {
+    .container .column-right {
+        .title {
+            font-size: 3rem;
+        }
+    }
+    .column-right .trailer {
+        .list-trailer {
+            .item-trailer {
+                width: 50%;
+            }
+        }
+    }
+}
+//Medium (768px);
+@media (max-width: 768px) {
+    .container {
+        padding: 48px 12px;
+    }
+    .container .details {
+        display: block;
+        overflow: hidden;
+        margin: 0;
+    }
+    .container .column-left,
+    .container .column-right {
+        padding: 0;
+        width: 100%;
+    }
+
+    .container .column-left {
+        margin-bottom: 36px;
+    }
+
+    .container .column-right {
+        .genres {
+            flex-direction: column;
+            .left {
+                flex-direction: column;
+                .share {
+                    margin-right: 0;
+                    margin-bottom: 12px;
+                }
+            }
+
+            .right {
+                margin-top: 24px;
+                .item {
+                }
+            }
+        }
+
+        .cast {
+            overflow-x: hidden;
+        }
+    }
+}
+
+@media (min-width: 769px) and (max-width: 1024px) {
+    .container {
+        padding: 48px 12px;
+    }
+
+    .column-right .trailer {
+        .list-trailer {
+            .item-trailer {
+                width: calc(100% / 2);
             }
         }
     }
