--- a/client/src/page/Login/Login.module.scss
+++ b/client/src/page/Login/Login.module.scss
@@ -26,7 +26,7 @@
     width: 100%;
     margin-bottom: 16px;
 
-    .email,
+    .userName,
     .password {
         width: 100%;
         height: 100%;
@@ -59,8 +59,9 @@
 .btn-submit {
     width: 100%;
     height: 50px;
+    margin-bottom: 10px;
     font-size: 2rem;
-    background-color: #3e8ed0;
+    background-color: hsl(207, 61%, 53%);
     color: #fff;
     border-radius: 3px;
     cursor: pointer;
