--- a/client/src/layouts/components/HeaderDefault/HeaderDefault.module.scss
+++ b/client/src/layouts/components/HeaderDefault/HeaderDefault.module.scss
@@ -1,5 +1,5 @@
 :root {
-    --brand-width: 160px;
+    --brand-width: 110px;
     --search-width: 110px;
     --red-btn: #c41f20;
 }
@@ -17,7 +17,6 @@
 }
 
 .header-active {
-    // background-color: rgba(51, 10, 103, 0.93);
     background-color: hsl(183, 86%, 19%, 0.9);
 }
 
@@ -46,26 +45,30 @@
 
 .nav-brand {
     height: 100%;
-    display: flex;
-    min-width: var(--brand-width);
     position: relative;
-    line-height: 56px;
-    justify-content: space-around;
+    // line-height: 56px;
     margin: 0;
 
     .brand-link {
+        display: flex;
+        align-items: center;
+        height: 100%;
         font-family: 'Zen Antique Soft';
-        font-size: 3rem;
+        font-size: 2.8rem;
         font-weight: 700;
         margin-left: 8px;
         color: #dc1a28;
         cursor: pointer;
     }
+    .svg {
+        width: var(--brand-width);
+        height: 34px;
+        fill: #c41f20;
+    }
 }
 
 .search {
     height: 56px;
-    width: var(--search-width);
     width: var(--search-width);
     margin-left: 10px;
 
@@ -133,12 +136,6 @@
 
     .nav-user {
         margin-left: auto;
-        :hover {
-            background-color: var(--red-btn);
-            border-color: transparent;
-            color: #fff;
-            cursor: pointer;
-        }
     }
 
     .btn-user {
@@ -156,6 +153,81 @@
             border-radius: 4px;
             color: #fff;
         }
+        :hover {
+            background-color: var(--red-btn);
+            border-color: transparent;
+            color: #fff;
+            cursor: pointer;
+        }
+    }
+}
+
+//LOGIN
+.account {
+    min-width: 200px;
+    height: var(--default-header-height);
+    margin-left: auto;
+    .navbar-account {
+        position: relative;
+        display: flex;
+        height: 100%;
+        justify-content: space-around;
+        align-items: center;
+        .user-name {
+            width: 140px;
+            font-size: 1.8rem;
+            line-height: 55px;
+            margin-left: 10px;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            -webkit-line-clamp: 2;
+        }
+        .icon {
+            width: 32px;
+            height: 32px;
+            color: #428bca;
+        }
+        &:hover {
+            background-color: #102c48;
+            cursor: pointer;
+            color: #428bca;
+        }
+    }
+    .navbar-list {
+        position: absolute;
+
+        width: 200px;
+        background-color: #242424;
+        display: none;
+        .navbar-item {
+            display: flex;
+            align-items: center;
+            height: 40px;
+            .icon {
+                width: 24px;
+                height: 24px;
+                fill: #fff;
+                margin-right: 8px;
+            }
+            p {
+                font-size: 1.4rem;
+            }
+            &:hover {
+                background-color: #f5f5f5;
+                color: #0a0a0a;
+                .icon {
+                    fill: #000;
+                    color: #000;
+                }
+            }
+        }
+    }
+    .navbar-account:hover ~ .navbar-list {
+        display: block;
+    }
+    .navbar-list:hover {
+        display: block;
     }
 }
 
@@ -201,7 +273,7 @@
         align-items: baseline;
 
         .nav-list,
-        .nav-use {
+        .nav-user {
             .item {
                 display: block;
             }
@@ -222,13 +294,41 @@
 
         .nav-user {
             width: 100%;
-            padding-left: 12px;
+            height: 100%;
+            padding-left: 16px;
             text-align: center;
             margin-bottom: 8px;
         }
 
         .btn-user {
             width: 100%;
+        }
+
+        .nav-user .account {
+            height: 40px;
+            .navbar-account {
+                justify-content: flex-start;
+
+                p {
+                    width: 100%;
+                    margin-left: 0;
+                    text-align: left;
+                    color: #fff;
+                    &:hover {
+                        color: #428bca;
+                    }
+                }
+                .icon {
+                    display: none;
+                }
+                &:hover {
+                    background-color: rgba(0, 0, 0, 0.1);
+                }
+            }
+            .navbar-list {
+                width: 100%;
+                left: 0;
+            }
         }
     }
 }
