--- a/client/src/page/MovieDetails/MovieDetails.module.scss
+++ b/client/src/page/MovieDetails/MovieDetails.module.scss
@@ -148,41 +148,93 @@
             align-items: center;
             margin-right: 30px;
             .item {
-                font-size: 1.6rem;
+                font-size: 1.4rem;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 border-radius: 4px;
-                padding: 6px 16px;
+                padding: 6px 14px;
+                .icon {
+                    width: 24px;
+                    height: 24px;
+                    margin-right: 10px;
+                }
             }
 
             .share {
                 margin-right: 14px;
                 background-color: #485fc7;
                 color: #fff;
-
-                .icon {
-                    font-size: 2.8rem;
-                    margin-right: 10px;
-                }
             }
 
             .album {
+                position: relative;
                 background-color: transparent;
                 border: 1px solid #3e8ed0;
                 color: #3e8ed0;
-
                 cursor: pointer;
+                &:hover {
+                    a,
+                    .icon {
+                        color: #dcf836;
+                    }
+                }
+            }
 
-                .icon {
+            //option
+            .option1,
+            .option2 {
+                border: none;
+                color: #fff;
+                .icon-check,
+                .icon-eye {
+                    width: 23px;
+                    height: 23px;
                     color: #fff;
-                    font-size: 2.8rem;
                     margin-right: 8px;
                 }
-
                 &:hover {
-                    color: #dcf836;
+                    color: #fff;
                 }
+                &:hover ~ .add-collection {
+                    display: block;
+                }
+            }
+            .option1 {
+                background-color: #203f76;
+            }
+            //df5d4d
+
+            .option2 {
+                background-color: #df5d4d;
+            }
+
+            .add-collection {
+                position: absolute;
+                min-width: 240px;
+                font-size: 1.4rem;
+                padding: 6px 12px;
+                border-radius: 4px;
+                background-color: #fff;
+                cursor: pointer;
+                display: none;
+                .watched {
+                    line-height: 30px;
+                    color: #000;
+                    b {
+                        margin-left: 6px;
+                    }
+                    &:hover {
+                        background-color: #f5f5f5;
+                    }
+                }
+            }
+            .album:hover ~ .add-collection {
+                display: block;
+            }
+
+            .add-collection:hover {
+                display: block;
             }
         }
 
