--- a/client/src/layouts/components/public/FoundSimilar/FoundSimilar.module.scss
+++ b/client/src/layouts/components/public/FoundSimilar/FoundSimilar.module.scss
@@ -9,13 +9,48 @@
     }
 }
 
+.intro {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    .header {
+        color: #fff;
+        font-size: 1.6rem;
+        font-weight: 600;
+    }
+
+    .icon {
+        display: block;
+        .icon-left,
+        .icon-right {
+            width: 34px;
+            height: 32px;
+            font-size: 3rem;
+            cursor: pointer;
+        }
+
+        .disable {
+            color: #b5b5b5;
+            cursor: text;
+        }
+        .none {
+            display: none;
+        }
+    }
+}
+
 .list {
     margin-top: 12px;
     display: flex;
+    overflow: hidden;
     .item {
-        padding-right: 16px;
+        padding: 0 10px;
+        width: 20%;
+        // flex-shrink: 0;
+        // flex-grow: 1;
         .image {
-            width: 180px;
+            width: 100%; //187px
             height: 270px;
             object-fit: cover;
         }
@@ -26,6 +61,30 @@
             &:hover {
                 color: #dcf836;
             }
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .list {
+        .item {
+            width: 50%;
+        }
+    }
+}
+
+@media (min-width: 577px) and (max-width: 1024px) {
+    .list {
+        .item {
+            width: calc(100% / 3);
+        }
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1200px) {
+    .list {
+        .item {
+            width: calc(100% / 4);
         }
     }
 }
