--- a/client/src/page/MovieDetails/MovieDetails.module.scss
+++ b/client/src/page/MovieDetails/MovieDetails.module.scss
@@ -3,8 +3,8 @@
 }
 
 .wrapper {
-    overflow: hidden;
     min-height: 1000px;
+    overflow: hidden;
 }
 
 .background {
@@ -46,6 +46,7 @@
     color: #fff;
 
     .details {
+        width: 100%;
         display: flex;
         margin: -12px -18px;
         overflow: hidden;
@@ -154,20 +155,28 @@
                 align-items: center;
                 border-radius: 4px;
                 padding: 6px 14px;
+
                 .icon {
                     width: 24px;
                     height: 24px;
-                    margin-right: 10px;
+                    margin-right: 6px;
+                }
+                .text {
+                    flex-basis: auto;
+                    flex-grow: 1;
+                    flex-shrink: 0;
                 }
             }
 
             .share {
+                min-width: 100px;
                 margin-right: 14px;
                 background-color: #485fc7;
                 color: #fff;
             }
 
             .album {
+                min-width: 110px;
                 position: relative;
                 background-color: transparent;
                 border: 1px solid #3e8ed0;
@@ -240,11 +249,13 @@
 
         .right {
             display: flex;
+            flex-wrap: wrap;
             .item {
                 font-size: 1.2rem;
                 padding: 4px 12px;
                 border: 1px solid #fff;
                 margin-right: 10px;
+                margin-bottom: 10px;
                 border-radius: 50px;
                 &:hover {
                     color: #dcf836;
@@ -378,10 +389,10 @@
                 }
 
                 .character {
+                    display: -webkit-box;
                     font-size: 1.4rem;
                     margin-top: 3px;
                     color: #b5b5b5;
-                    display: -webkit-box;
                     -webkit-box-orient: vertical;
                     -webkit-line-clamp: 2;
                     overflow: hidden;
@@ -398,22 +409,22 @@
     .list-trailer {
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        // justify-content: space-between;
         margin-top: -14px;
         margin-left: 2px;
 
         .item-trailer {
             width: calc(100% / 4);
-            height: auto;
             padding: 10px;
-            flex-shrink: 0;
             .clip {
                 position: relative;
+                width: 100%;
                 cursor: pointer;
-                .image-trailer {
-                    width: 100%;
-                    height: 100%;
-                }
+                // ifame {
+                //     width: 100%;
+                //     flex-shrink: 0;
+                // }
+
                 &:hover {
                     border: 2px solid #cc7b19;
                 }
@@ -537,6 +548,20 @@
         .list-trailer {
             .item-trailer {
                 width: calc(100% / 2);
+            }
+        }
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1366px) {
+    .container {
+        padding: 48px 12px;
+    }
+
+    .column-right .genres {
+        .left {
+            .item {
+                font-size: 1.2rem !important;
             }
         }
     }
