--- a/client/src/page/MovieDetails/MovieDetails.module.scss
+++ b/client/src/page/MovieDetails/MovieDetails.module.scss
@@ -513,6 +513,12 @@
 
     .container .column-left {
         margin-bottom: 36px;
+        .film-image .image {
+            width: 334px;
+        }
+    }
+
+    .container .column-right {
     }
 
     .container .column-right {
