--- a/client/src/layouts/components/public/ListFilm/ListFilm.module.scss
+++ b/client/src/layouts/components/public/ListFilm/ListFilm.module.scss
@@ -7,9 +7,6 @@
     padding: 0 10px;
 }
 
-.list {
-}
-
 .item {
     width: 100%;
     height: 230px;
@@ -18,18 +15,20 @@
 }
 
 .item-2 {
-    padding-top: 16px;
-    margin-top: 16px;
+    padding-top: 20px;
+    margin-top: 22px;
     border-top: 1px solid hsla(0, 0%, 85.9%, 0.5);
 }
 
 .film-image {
     width: var(--image-width);
-    height: 100%;
     margin-right: 32px;
-    .image {
-        width: 100%;
-        height: 100%;
+    a {
+        height: 210px;
+        .image {
+            width: 100%;
+            height: 100%;
+        }
     }
 }
 
@@ -119,7 +118,7 @@
     .document {
         display: flex;
         flex-wrap: wrap;
-        padding: 12px;
+        padding: 10px;
         font-size: 1.2rem;
         a {
             display: flex;
@@ -145,7 +144,7 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        padding: 12px 0 12px 12px;
+        padding: 8px 0 8px 8px;
         font-size: 1.6rem;
         font-weight: 700;
         color: #b5b5b5;
@@ -155,16 +154,5 @@
             height: 40px;
             margin-right: 16px;
         }
-    }
-}
-
-//Small
-@media screen and (max-width: 575px) {
-    .row-1 {
-        // display: block;
-    }
-
-    .row-3 {
-        display: block;
     }
 }
